--- a/HTML/Skeleton.html
+++ b/HTML/Skeleton.html
@@ -3,8 +3,7 @@
 		<script src="http://wavedrom.com/skins/default.js" type="text/javascript"></script>
 		<script src="http://wavedrom.com/WaveDrom.js" type="text/javascript"></script>
 		<script>
-			var sourceString = {'JSONString' : {assign:[['Cout',['|',['&','Cin',['^','A','B']],['&','A','B']]],['S',['^','Cin',['^','A','B']]]]}, 'gatesDescriptions' : ['Type: xor\nName: xr1\nT-Rise: 0\nT-Fall: 0\n','Type: xor\nName: xr2\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a1\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a2\nT-Rise: 0\nT-Fall: 0\n','Type: or\nName: o1\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [4,2,0,3,1,0]};
-			var JSONObject = sourceString;
+			var JSONObject = {'JSONString' : {assign:[['Cout',['|',['&','Cin',['^','A','B']],['&','A','B']]],['S',['^','Cin',['^','A','B']]]]}, 'gatesDescriptions' : ['Type: xor\nName: xr1\nT-Rise: 0\nT-Fall: 0\n','Type: xor\nName: xr2\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a1\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a2\nT-Rise: 0\nT-Fall: 0\n','Type: or\nName: o1\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [4,2,0,3,1,0]};
 			var JSONString = JSONObject.JSONString;
 			var gatesDescriptions = JSONObject.gatesDescriptions;
 			var indexInGatesDescriptionsArray = JSONObject.indexInGatesDescriptionsArray;
