--- a/HTML/Skeleton.html
+++ b/HTML/Skeleton.html
@@ -3,19 +3,42 @@
 		<script src="http://wavedrom.com/skins/default.js" type="text/javascript"></script>
 		<script src="http://wavedrom.com/WaveDrom.js" type="text/javascript"></script>
 		<script>
-			var JSONObject = {'JSONString' : {assign:[['Cout',['|',['&','Cin',['^','A','B']],['&','A','B']]],['S',['^','Cin',['^','A','B']]]]}, 'gatesDescriptions' : ['Type: xor\nName: xr1\nT-Rise: 0\nT-Fall: 0\n','Type: xor\nName: xr2\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a1\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a2\nT-Rise: 0\nT-Fall: 0\n','Type: or\nName: o1\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [4,2,0,3,1,0]};
+			var JSONObject = {'JSONString' : {assign:[['co',['=',['~&',['~&','x[1]','y[1]'],['~&',['|','x[1]','y[1]'],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]]],['s[1]',['=',['~^',['~&',['~&','x[1]','y[1]'],['|','x[1]','y[1]']],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]],['s[0]',['=',['^','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]}, 'gatesDescriptions' : ['Type: buf\nName: b1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd6\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: UNKNOWN_GATE_0\nT-Rise: 0\nT-Fall: 0\n','Type: or\nName: o1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd4\nT-Rise: 0\nT-Fall: 0\n','Type: inv\nName: in1\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a1\nT-Rise: 1\nT-Fall: 8\n','Type: nand\nName: nd3\nT-Rise: 0\nT-Fall: 0\n','Type: nor\nName: nr2\nT-Rise: 0\nT-Fall: 0\n','Type: nor\nName: nr1\nT-Rise: 0\nT-Fall: 0\n','Type: buf\nName: b3\nT-Rise: 0\nT-Fall: 0\n','Type: xnor\nName: xnr1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd2\nT-Rise: 0\nT-Fall: 0\n','Type: buf\nName: b2\nT-Rise: 0\nT-Fall: 0\n','Type: xor\nName: xr1\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [0,1,2,3,4,5,6,7,8,9,7,10,11,12,13,2,4,5,6,7,8,9,7,10,14,15,9,7,10], 'longestPathsArray' : [[0,1,3,4],[0,1,3,4],[0,1,3,5,8,9,10],[0,1,3,5,8,9,10],[0,1,3,5,8]], 'indexInLongestPathsArray' : [0,1,0,1,2,3,4,2,3,2,3,0,1,0,1,2,3,4,2,3,2,3,4,2,3,2,3]};
 			var JSONString = JSONObject.JSONString;
 			var gatesDescriptions = JSONObject.gatesDescriptions;
 			var indexInGatesDescriptionsArray = JSONObject.indexInGatesDescriptionsArray;
+			var longestPathsArray = JSONObject.longestPathsArray;
+			var indexInLongestPathsArray = JSONObject.indexInLongestPathsArray;
 		</script>
 		<script type="WaveDrom">
 			JSONString
 		</script>
 		<script>
+			var onMouseOverInput = function(i) {
+				var f = function() {
+							for (var j = 0; j < longestPathsArray[indexInLongestPathsArray[i]].length; j++) {
+								gateArray[longestPathsArray[indexInLongestPathsArray[i]][j]].setAttribute("style", "color: #000; fill: #0f0; fill-opacity: 1; stroke: #000; stroke-width: 1; stroke-opacity: 1");
+							}
+						}
+				return f;
+			}
+			var onMouseOutInput = function(i) {
+				var f = function() {
+							for (var j = 0; j < longestPathsArray[indexInLongestPathsArray[i]].length; j++) {
+								gateArray[longestPathsArray[indexInLongestPathsArray[i]][j]].setAttribute("style", "color: #000; fill: #ffc; fill-opacity: 1; stroke: #000; stroke-width: 1; stroke-opacity: 1");
+							}
+						}
+				return f;
+			}
 			WaveDrom.ProcessAll();
 			var gateArray = document.getElementsByClassName("gate");
 			for(var i = 0; i < gateArray.length; i++)
 				gateArray[i].parentNode.childNodes[0].innerHTML = gatesDescriptions[indexInGatesDescriptionsArray[i]];
+			var inputArray = document.getElementsByClassName("pinname");
+			for (var i = 0; i < inputArray.length; i++) {
+				inputArray[i].onmouseover = onMouseOverInput(i);
+				inputArray[i].onmouseout = onMouseOutInput(i);
+			}
 		</script>
 		<style>
 			.pinname:hover {fill: green !important;}
