--- a/HTML/Skeleton.html
+++ b/HTML/Skeleton.html
@@ -3,15 +3,15 @@
 		<script src="http://wavedrom.com/skins/default.js" type="text/javascript"></script>
 		<script src="http://wavedrom.com/WaveDrom.js" type="text/javascript"></script>
 		<script>
-			var JSONObject = {'JSONString' : {assign:[['co',['=',['~&',['~&','x[1]','y[1]'],['~&',['|','x[1]','y[1]'],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]]],['s[1]',['=',['~^',['~&',['~&','x[1]','y[1]'],['|','x[1]','y[1]']],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]],['s[0]',['=',['^','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]}, 'gatesDescriptions' : ['Type: buf\nName: b1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd6\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: UNKNOWN_GATE_0\nT-Rise: 0\nT-Fall: 0\n','Type: or\nName: o1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd4\nT-Rise: 0\nT-Fall: 0\n','Type: inv\nName: in1\nT-Rise: 0\nT-Fall: 0\n','Type: and\nName: a1\nT-Rise: 1\nT-Fall: 8\n','Type: nand\nName: nd3\nT-Rise: 0\nT-Fall: 0\n','Type: nor\nName: nr2\nT-Rise: 0\nT-Fall: 0\n','Type: nor\nName: nr1\nT-Rise: 0\nT-Fall: 0\n','Type: buf\nName: b3\nT-Rise: 0\nT-Fall: 0\n','Type: xnor\nName: xnr1\nT-Rise: 0\nT-Fall: 0\n','Type: nand\nName: nd2\nT-Rise: 0\nT-Fall: 0\n','Type: buf\nName: b2\nT-Rise: 0\nT-Fall: 0\n','Type: xor\nName: xr1\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [0,1,2,3,4,5,6,7,8,9,7,10,11,12,13,2,4,5,6,7,8,9,7,10,14,15,9,7,10], 'longestPathsArray' : [[0,1,3,4],[0,1,3,4],[0,1,3,5,8,9,10],[0,1,3,5,8,9,10],[0,1,3,5,8]], 'indexInLongestPathsArray' : [0,1,0,1,2,3,4,2,3,2,3,0,1,0,1,2,3,4,2,3,2,3,4,2,3,2,3]};
-			var JSONString = JSONObject.JSONString;
+			var JSONObject = {'JSONString' : {assign:[['co',['=',['~&',['~&','x[1]','y[1]'],['~&',['|','x[1]','y[1]'],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]]],['s[1]',['=',['~^',['~&',['~&','x[1]','y[1]'],['|','x[1]','y[1]']],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]],['s[0]',['=',['^','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]}, 'gatesDescriptions' : ['Type: BUFX2\nName: _26_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _25_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _17_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _24_\nT-Rise: 0\nT-Fall: 0\n','Type: OR2X2\nName: _18_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _22_\nT-Rise: 0\nT-Fall: 0\n','Type: INVX1\nName: _20_\nT-Rise: 0\nT-Fall: 0\n','Type: AND2X2\nName: _13_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _21_\nT-Rise: 0\nT-Fall: 0\n','Type: NOR2X1\nName: _15_\nT-Rise: 0\nT-Fall: 0\n','Type: NOR2X1\nName: _14_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _28_\nT-Rise: 0\nT-Fall: 0\n','Type: XNOR2X1\nName: _23_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _19_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _27_\nT-Rise: 0\nT-Fall: 0\n','Type: XOR2X1\nName: _16_\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [0,1,2,3,4,5,6,7,8,9,7,10,11,12,13,2,4,5,6,7,8,9,7,10,14,15,9,7,10], 'longestPathsArray' : [[0,1,3,4],[0,1,3,4],[0,1,3,5,8,9,10],[0,1,3,5,8,9,10],[0,1,3,5,8]], 'indexInLongestPathsArray' : [0,1,0,1,2,3,4,2,3,2,3,0,1,0,1,2,3,4,2,3,2,3,4,2,3,2,3]};
+			var waveJSON = JSONObject.JSONString;
 			var gatesDescriptions = JSONObject.gatesDescriptions;
 			var indexInGatesDescriptionsArray = JSONObject.indexInGatesDescriptionsArray;
 			var longestPathsArray = JSONObject.longestPathsArray;
 			var indexInLongestPathsArray = JSONObject.indexInLongestPathsArray;
 		</script>
 		<script type="WaveDrom">
-			JSONString
+			waveJSON
 		</script>
 		<script>
 			var onMouseOverInput = function(i) {
