Update Digital Project .html

--- a/HTML/Digital Project .html
+++ b/HTML/Digital Project .html
@@ -167,13 +167,12 @@
 	<footer>
 		<div id="down">
 			<address>
-				Presented by: <a style="color:white" href="mailto:bahermursi@aucegypt.edu"><br> Baher Mursi</a> <a style="color:white" href="mailto:hebasakr@aucegypt.edu"><br>Heba Sakr</a><br><a style="color:white" href=				"mailto:therealyoussef@aucegypt.edu">Youssef Ayman</a><br><br>
+				Presented by: <a style="color:white" href="mailto:bahermursi@aucegypt.edu"><br> Baher Mursi</a> <a style="color:white" href="mailto:hebasakr@aucegypt.edu"><br>Heba Sakr</a><br><a style="color:white" href="mailto:therealyoussef@aucegypt.edu">Youssef Ayman</a><br><br>
 
-				Presented to: <a style="color:white" href="mailto:mshalan@aucegypt.edu"><br> Dr.Mohamed Shalan</a>. <br> <br><a style="color:white" href="mailto:bahermursi@aucegypt.edu,hebasakr@aucegypt.edu, therealyoussef@aucegypt.edu">For any questions</a>
-
-
-				
+				Presented to: <a style="color:white" href="mailto:mshalan@aucegypt.edu"><br> Dr.Mohamed Shalan</a>. <br> <br>
+	
 			</address>	
+
 
 			<a style="color:white" href="http://catalog.aucegypt.edu/preview_course_nopop.php?catoid=20&coid=31887">Digital Design 1</a><br>
 				
