--- a/HTML/Skeleton.html
+++ b/HTML/Skeleton.html
@@ -3,7 +3,7 @@
 		<script src="http://wavedrom.com/skins/default.js" type="text/javascript"></script>
 		<script src="http://wavedrom.com/WaveDrom.js" type="text/javascript"></script>
 		<script>
-			var JSONObject = {'JSONString' : {assign:[['co',['=',['~&',['~&','x[1]','y[1]'],['~&',['|','x[1]','y[1]'],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]]],['s[1]',['=',['~^',['~&',['~&','x[1]','y[1]'],['|','x[1]','y[1]']],['~&',['~',['&','x[0]','y[0]']],['~&','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]],['s[0]',['=',['^','ci',['~|',['&','x[0]','y[0]'],['~|','x[0]','y[0]']]]]]]}, 'gatesDescriptions' : ['Type: BUFX2\nName: _26_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _25_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _17_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _24_\nT-Rise: 0\nT-Fall: 0\n','Type: OR2X2\nName: _18_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _22_\nT-Rise: 0\nT-Fall: 0\n','Type: INVX1\nName: _20_\nT-Rise: 0\nT-Fall: 0\n','Type: AND2X2\nName: _13_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _21_\nT-Rise: 0\nT-Fall: 0\n','Type: NOR2X1\nName: _15_\nT-Rise: 0\nT-Fall: 0\n','Type: NOR2X1\nName: _14_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _28_\nT-Rise: 0\nT-Fall: 0\n','Type: XNOR2X1\nName: _23_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _19_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _27_\nT-Rise: 0\nT-Fall: 0\n','Type: XOR2X1\nName: _16_\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [0,1,2,3,4,5,6,7,8,9,7,10,11,12,13,2,4,5,6,7,8,9,7,10,14,15,9,7,10], 'longestPathsArray' : [[0,1,3,4],[0,1,3,4],[0,1,3,5,8,9,10],[0,1,3,5,8,9,10],[0,1,3,5,8]], 'indexInLongestPathsArray' : [0,1,0,1,2,3,4,2,3,2,3,0,1,0,1,2,3,4,2,3,2,3,4,2,3,2,3]};
+			var JSONObject = {'JSONString' : {assign:[['co',['=',['~&',['~&','x[1]','y[1]'],['~&',['|','x[1]','y[1]'],['~&',['~',['BUF','x[0]','y[0]']],['~&','ci',['~|',['BUF','x[0]','y[0]'],['BUF','x[0]','y[0]']]]]]]]],['s[1]',['=',['~^',['~&',['~&','x[1]','y[1]'],['|','x[1]','y[1]']],['~&',['~',['BUF','x[0]','y[0]']],['~&','ci',['~|',['BUF','x[0]','y[0]'],['BUF','x[0]','y[0]']]]]]]],['s[0]',['=',['^','ci',['~|',['BUF','x[0]','y[0]'],['BUF','x[0]','y[0]']]]]]]}, 'gatesDescriptions' : ['Type: BUFX2\nName: _26_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _25_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _17_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _24_\nT-Rise: 0\nT-Fall: 0\n','Type: OR2X2\nName: _18_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _22_\nT-Rise: 0\nT-Fall: 0\n','Type: INVX1\nName: _20_\nT-Rise: 0\nT-Fall: 0\n','Type: DFFNEGX1\nName: _13_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _21_\nT-Rise: 0\nT-Fall: 0\n','Type: NOR2X1\nName: _15_\nT-Rise: 0\nT-Fall: 0\n','Type: DFFNEGX1\nName: _14_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _28_\nT-Rise: 0\nT-Fall: 0\n','Type: XNOR2X1\nName: _23_\nT-Rise: 0\nT-Fall: 0\n','Type: NAND2X1\nName: _19_\nT-Rise: 0\nT-Fall: 0\n','Type: BUFX2\nName: _27_\nT-Rise: 0\nT-Fall: 0\n','Type: XOR2X1\nName: _16_\nT-Rise: 0\nT-Fall: 0\n'], 'indexInGatesDescriptionsArray' : [0,1,2,3,4,5,6,7,8,9,7,10,11,12,13,2,4,5,6,7,8,9,7,10,14,15,9,7,10], 'longestPathsArray' : [[0,1,3,4],[0,1,3,4],[0,1,3,5,8,9,10],[0,1,3,5,8,9,10],[0,1,3,5,8]], 'indexInLongestPathsArray' : [0,1,0,1,2,3,4,2,3,2,3,0,1,0,1,2,3,4,2,3,2,3,4,2,3,2,3]};
 			var waveJSON = JSONObject.JSONString;
 			var gatesDescriptions = JSONObject.gatesDescriptions;
 			var indexInGatesDescriptionsArray = JSONObject.indexInGatesDescriptionsArray;
@@ -32,8 +32,14 @@
 			}
 			WaveDrom.ProcessAll();
 			var gateArray = document.getElementsByClassName("gate");
-			for(var i = 0; i < gateArray.length; i++)
-				gateArray[i].parentNode.childNodes[0].innerHTML = gatesDescriptions[indexInGatesDescriptionsArray[i]];
+			for(var i = 0; i < gateArray.length; i++) {
+				if (gateArray[i].parentNode.childNodes[0].nodeName == "title")
+					gateArray[i].parentNode.childNodes[0].innerHTML = gatesDescriptions[indexInGatesDescriptionsArray[i]];
+				else {
+					gateArray[i].parentNode.parentNode.childNodes[0].innerHTML = gatesDescriptions[indexInGatesDescriptionsArray[i]];
+					gateArray[i].parentNode.childNodes[1].innerHTML = '';
+				}
+			}
 			var inputArray = document.getElementsByClassName("pinname");
 			for (var i = 0; i < inputArray.length; i++) {
 				inputArray[i].onmouseover = onMouseOverInput(i);
