--- a/HTML/Javascript.html
+++ b/HTML/Javascript.html
@@ -98,6 +98,7 @@
 		</script>
 		<style>
 			.pinname:hover {fill: green !important;}
+			.wirename:hover {fill: green !important;}
 		</style>
 	</body>
 </html>
